--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
   <meta charset="utf-8">
   <title>Página personal de Cristhian</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Cristhian.jpg" alt="Cristhian Cabra" height="200" width="200"></td>
+      <td><img src="Cristhian-modified.png" alt="Cristhian Cabra" height="200" width="200"></td>
       <td><H1>Cristhian Cabra</H1>
       <p><em><strong>Desarrollador VBA y WEB</strong></em></p>
       <p>Soy un desarrollador enfocado a la programación en excel</p></td>
     </tr>
   </table>
-  <hr size=2 noshade>
+  <hr>
   <h3>Desarrollo, soluciones y cursos</h3>
   <ul>
     <li>Desarrollo VBA</li>
     <li>Desarrollo Web</li>
   </ul>
   <hr>
-  <h2>Experiencia Laboral</h2>
+  <h3>Experiencia Laboral</h3>
   <table cellspacing="10">
     <thead>
       <tr>
@@ -40,7 +42,7 @@
     </tbody>
   </table>
   <hr>
-  <h2>Habilidades</h2>
+  <h3>Habilidades</h3>
   <table cellspacing = "10">
     <tr>
       <td>VBA Excel</td>
